# udacity-final-project

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
cloudformation/: network-cf.yml  nodes-cf-params.json  nodes-cf.yml
k8s/: aws-auth-cm.yml  simpleapi-deployment.yml  simpleapi-service.yml  simpleapi-test-service.yml
src/simpleapi/: api.py
tests/: test_api.py
