[metadata]
name = simpleapi
description = Udacity Final project submission
author = Joshua Kline
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = simpleapi
install_requires = 
    flask>=2
    flask-restplus>=0.13
python_requires = >=3.8
package_dir = 
    =src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
simpleapi = py.typed

[flake8]
max-line-length = 160
ignore = E402